# Ryanair-checker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1d7cda3b1998_add_best_price_seats_left_to_.py  445e6d0171f2_add_best_price_seats_left_to_.py  ba381df0e898_add_current_price_to_subscriptions.py  f0d8daf8ab0b_initial.py
app/: __main__.py  config.py  log_setup.py  scheduler.py
app/db/: models.py  session.py
app/filters/: admin.py
app/handlers/: add_subscription.py  admin.py  list_subscriptions.py  start.py
app/keyboards/: inline.py  reply.py
app/middlewares/: db.py  user_registration.py
app/ryanair/: airports.py  client.py  schemas.py
app/services/: alerting.py  notifier.py  price_tracker.py  subscriptions.py
