[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ryanair-price-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "apscheduler>=3.10",
    "httpx>=0.28",
    "tenacity>=9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
